src/objects/Channel_Profile__c.object
<CustomObject>
    <description>Maintain the profiles of the channels an account is associated with.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account Name</description>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Profiles</relationshipLabel>
        <relationshipName>Channel_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>Select the business this Channel Profile is related to, in order to filter the Segment choices</description>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lenovo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Channel Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <inlineHelpText>% of  units for the Account attributable to this specific distribution channel</inlineHelpText>
        <label>% Mix</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_Of_Stores__c</fullName>
        <description>Total number of retail stores; This field applies to the retail / COR channel</description>
        <inlineHelpText>Total number of retail stores; This field applies to the retail / COR channel</inlineHelpText>
        <label>Number Of Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Segment__c</fullName>
        <label>Porfolio Segment</label>
        <picklist>
            <controllingField>Business__c</controllingField>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postpaid_pct__c</fullName>
        <label>% Postpaid</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prepaid_pct__c</fullName>
        <label>% Prepaid</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Tier__c</fullName>
        <label>Price Tier</label>
        <picklist>
            <picklistValues>
                <fullName>High - &gt;$400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid - $200-$399</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low - &lt;$200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Segment_Combo_ID__c</fullName>
        <description>Field to capture the combination of Type and Portfolio Segment to verify the combination had not already been added to the account.</description>
        <inlineHelpText>Field to capture the combination of Type and Portfolio Segment to verify the combination had not already been added to the account.</inlineHelpText>
        <label>Need unique Type and Portfolio Segment</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Channel Type</description>
        <inlineHelpText>Channel Type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>COR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Channel Profile</label>
    <nameField>
        <displayFormat>CHP-{000000}</displayFormat>
        <label>Channel Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>